# stoat.py

./: README.md  pyproject.toml  test.json
scripts/: bootstrap.sh  generate_models.py
src/stoat/: stoat.py
src/stoat/models/: AccountInfo.py  AllMemberResponse.py  AuthifierError.py  BanListResult.py  BandcampType.py  BannedUser.py  Bot.py  BotInformation.py  BotWithUserResponse.py  BulkMessageResponse.py  CaptchaFeature.py  Category.py  Channel.py  ChannelCompositeKey.py  ChannelUnread.py  ContentReportReason.py  CreateServerLegacyResponse.py  CreateVoiceUserResponse.py  CreateWebhookBody.py  DataAccountDeletion.py  DataBanCreate.py  DataChangeEmail.py  DataChangePassword.py  DataChangeUsername.py  DataCreateAccount.py  DataCreateBot.py  DataCreateEmoji.py  DataCreateGroup.py  DataCreateRole.py  DataCreateServer.py  DataCreateServerChannel.py  DataDefaultChannelPermissions.py  DataEditBot.py  DataEditChannel.py  DataEditMessage.py  DataEditRole.py  DataEditRoleRanks.py  DataEditServer.py  DataEditSession.py  DataEditUser.py  (+97 more)
